--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.0",
-    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.0",
     "@angular/compiler": "~10.1.0",
     "@angular/core": "~10.1.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.1.0",
-    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
-    "@material/list": "^8.0.0",
-    "@material/menu": "^8.0.0",
+    "firebase": "^8.1.2",
     "jquery": "^3.5.1",
     "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.6.0",
